chore: Fix tinylog