@@ -45,13 +45,6 @@ compileTestJava {
 }
 
 
-compileJava {
-  options.compilerArgs.addAll([
-    '--add-reads', 'de.sayayi.lib.methodlogging=ALL-UNNAMED'
-  ])
-}
-
-
 test {
   useJUnitPlatform()
 }
@@ -124,7 +117,6 @@ javadoc {
 
     addStringOption('Xdoclint:-missing', '-quiet')
     addStringOption('-show-module-contents', 'api')
-    addStringOption('-add-reads', 'de.sayayi.lib.methodlogging=ALL-UNNAMED')
   }
 
   failOnError = false
